@@ -1,3 +1,11 @@
+2005-09-20  Esteban Sanchez <esteban@steve-o.org>
+
+	* configure.in: Dependency of libsoup relaxed to 2.2
+
+	* src/buoh-view.c, src/buoh-window.c, src/main.c,
+	data/buoh.desktop.in: Rename and give consistency to the program name
+	"Buoh online comics reader"
+
 2005-09-20  Carlos Garcia Campos  <carlosgc@gnome.org>
 
 	* configure.in: Remove glade dependencies and add libsoup
